--- a/styles.css
+++ b/styles.css
@@ -68,8 +68,10 @@ h2{
 .product_desc_container{
     width: 50vw;
 }
-.product_desc_container p{
-   margin-bottom: 2.5rem; 
+.product_desc_container p:nth-child(3){
+   margin-bottom: 2.5rem;
+   font-size: 1.3em;
+   font-weight: 700;
 }
 .buy_button{
     width: 200px;
